; ModuleID = '/home/carl/AnghaBench/linux/net/netfilter/extr_nf_tables_core.c_nft_cmp_fast_eval.c'
source_filename = "/home/carl/AnghaBench/linux/net/netfilter/extr_nf_tables_core.c_nft_cmp_fast_eval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nft_expr = type { i32 }
%struct.nft_regs = type { i32*, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.nft_cmp_fast_expr = type { i64, i32, i32 }

@NFT_BREAK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nft_expr*, %struct.nft_regs*)* @nft_cmp_fast_eval to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nft_cmp_fast_eval(%struct.nft_expr* %0, %struct.nft_regs* %1) #0 {
  %3 = alloca %struct.nft_expr*, align 8
  %4 = alloca %struct.nft_regs*, align 8
  %5 = alloca %struct.nft_cmp_fast_expr*, align 8
  %6 = alloca i32, align 4
  store %struct.nft_expr* %0, %struct.nft_expr** %3, align 8
  store %struct.nft_regs* %1, %struct.nft_regs** %4, align 8
  %7 = load %struct.nft_expr*, %struct.nft_expr** %3, align 8
  %8 = call %struct.nft_cmp_fast_expr* @nft_expr_priv(%struct.nft_expr* %7)
  store %struct.nft_cmp_fast_expr* %8, %struct.nft_cmp_fast_expr** %5, align 8
  %9 = load %struct.nft_cmp_fast_expr*, %struct.nft_cmp_fast_expr** %5, align 8
  %10 = getelementptr inbounds %struct.nft_cmp_fast_expr, %struct.nft_cmp_fast_expr* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @nft_cmp_fast_mask(i32 %11)
  store i32 %12, i32* %6, align 4
  %13 = load %struct.nft_regs*, %struct.nft_regs** %4, align 8
  %14 = getelementptr inbounds %struct.nft_regs, %struct.nft_regs* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = load %struct.nft_cmp_fast_expr*, %struct.nft_cmp_fast_expr** %5, align 8
  %17 = getelementptr inbounds %struct.nft_cmp_fast_expr, %struct.nft_cmp_fast_expr* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = getelementptr inbounds i32, i32* %15, i64 %18
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* %6, align 4
  %22 = and i32 %20, %21
  %23 = load %struct.nft_cmp_fast_expr*, %struct.nft_cmp_fast_expr** %5, align 8
  %24 = getelementptr inbounds %struct.nft_cmp_fast_expr, %struct.nft_cmp_fast_expr* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  %26 = icmp eq i32 %22, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %2
  br label %33

28:                                               ; preds = %2
  %29 = load i32, i32* @NFT_BREAK, align 4
  %30 = load %struct.nft_regs*, %struct.nft_regs** %4, align 8
  %31 = getelementptr inbounds %struct.nft_regs, %struct.nft_regs* %30, i32 0, i32 1
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 0
  store i32 %29, i32* %32, align 8
  br label %33

33:                                               ; preds = %28, %27
  ret void
}

declare dso_local %struct.nft_cmp_fast_expr* @nft_expr_priv(%struct.nft_expr*) #1

declare dso_local i32 @nft_cmp_fast_mask(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
